--- a/content.html
+++ b/content.html
@@ -58,11 +58,7 @@
     <section id="content">
         <img src="billeder/SVG/4.svg" alt="indholdsbillede">
 
-        <!--
-        <div class="wrap">
-            <img src="http://image.flaticon.com/icons/svg/3/3907.svg" id="arrow" class="animated bounce" alt="pil">
-        </div>
--->
+
         <div class="parallax_7">
 
         </div>
@@ -80,39 +76,36 @@
 
                     Vi har arbejdet med <i>GitHub</i>, som har gjort det muligt for alle i gruppen at arbejde i samme brackets
                     dokument. Det har gjort det lettere at samarbejde omkring kodningen, samt givet mulighed for at alle fik en grundforståelse for den
-                    kode vi udarbejdede.
-                </p>
-
-                <div class="button"> <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html">NW gallery site</a></div>
-
-            </div>
-            <div class="text">
-                <p>Herudover er vi introduceret til flere testformer:<br>
-                    <b>BERT-test</b> (Bipolar emotional response testing) Som kort går ud på, at få subjektive holdninger fra
+                    kode vi udarbejdede. <br><br>Herudover er vi introduceret til flere testformer:<br>
+                    <b>BERT-test</b> (Bipolar emotional response testing): Som kort går ud på, at få subjektive holdninger fra
                     brugeren om designet eller indholdet på sitet.
-                    <br><b>5-sekunders test</b> Denne test går ud på, at få testpersonens førstehåndsindtryk af sitet, og om man
+                    <br><b>5-sekunders test</b>: Denne test går ud på, at få testpersonens førstehåndsindtryk af sitet, og om man
                     opfatter sitets formål og koncept, så snart man åbner den.
                     <br>
-                    Og til sidst: <b>Heuristisk-test</b> Dette er en test, hvor man får en eksperts perspektiv. Eksperten vil her
+                    <b>Heuristisk-test</b>: Dette er en test, hvor man får en eksperts perspektiv. Eksperten vil her
                     gennemgå siden, og se det med brugerens øje, for at finde frem til hvad der kunne være af
                     mangler og krav med henblik på at skabe en fuldendt brugervenlighed.
-
                 </p>
-                <div class="button"> <a href="http://josefinececilie.dk/kea/05_indhold/05_03_01_gruppe13/index.html">Se dokumentation</a></div>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/05_indhold/05_03_01_gruppe13/index.html">Se dokumentation</a>
+                </div>
+
+
+
             </div>
+
             <div class="text">
                 <p>Vi valgte i vores gruppe, at redesigne NW Gallery, hvilket er et fotogalleri i Nansensgade. Hos NW
                     Gallery har Nina Worren - ejeren af galleriet - særligt fokus på det kunstneriske og personlige
-                    fotografi.
+                    fotografi.<br><br>
                     Vi startede ud med at have lave et kort interview med Nina Worren, for at få et billede af hvad
                     virksomhedens identitet var, og hvad hun havde af planer og tanker for sin virksomhed. Det gik
                     hurtigt op for os, at hun havde mange planer i mange forskellige retninger, og det var svært, at
-                    have finde en klar identitet. Derfor har vores hovedfokus i opgaven været at forsøge at tydeliggøre
+                    have finde en klar identitet.<br><br> Derfor har vores hovedfokus i opgaven været at forsøge at tydeliggøre
                     virksomhedens identitet, så den fremstod klar for de brugere, der ville benytte sitet.
                     Det gjorde vi ved at lave en mere overskuelig og clean side, som endnu ikke er endeligt klar. Vi har
                     valgt at bruge lyse farver og nuancer med særligt fokus på hvid og lysegrå, samt skrå linjer imellem
                     hver del på sitet. Dette element inddrog vi for at skabe kontrast til de horisontale og vertikale lige
-                    linjer, som fotografiernes form skaber i et fotogalleri.
+                    linjer, som fotografiernes form skaber i et fotogalleri.<br><br>
                     I forbindelse med udarbejdelse af indholdsmateriale lavede vi en video, for at skabe en audiovisuel
                     fortælling om NW Gallery og stedets identitet. Videoen viste galleriejeren Nina Worren og hendes
                     sted.
@@ -120,9 +113,11 @@
                     har lært gennem undervisningsforløbet.
 
                 </p>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html">Gå til NW Gallery</a></div>
             </div>
+            <div class="text">
+                <img src="Sk%C3%A6rmbillede%202020-01-07%20kl.%2019.28.18.png" alt="nw gallery redesign"> </div>
         </div>
-
         <div class="parallax_8">
 
         </div>
