--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
 
 
         <div class="col_top">
-            <h2>Eksempler på tidligere arbejde</h2>
+            <h2>Eksempler på tidligere arbejde</h2><br>
 
         </div>
 
