--- a/web.html
+++ b/web.html
@@ -84,7 +84,7 @@
                     hjulpet mig i mit arbejde siden hen, da det er medvirker til at skabe bedre overblik over, hvordan
                     opsættelsen af diverse HMTL’ers’ parent og child skal fremstilles, så det fremstår som ønsket.
                 </p>
-                <div class="button"> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Gå til American magazine</a></div>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Gå til American Magazine</a></div>
 
 
             </div>
@@ -102,7 +102,7 @@
                     kode mig frem til en ‘burger’/dropdown menu. Det færdige produkt kan ses herunder.
 
                 </p>
-                <div class="button"><a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Se version to af American magazine</a></div>
+                <div class="button"><a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Gå til American Magazine v2</a></div>
             </div>
 
             <div class="text">
